Fixed scrollbar for notes page

--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ aside {
 }
 
 /* CODE BLOCKS */
-pre code {
+pre, code {
     width: 100%;
     display: block;
     border: 1px solid #ddd;
@@ -180,6 +180,8 @@ pre code {
     padding: 1em 3em;
     margin-bottom: 1em;
     line-height: 1.5;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 .markup-box {
@@ -188,6 +190,13 @@ pre code {
     background-color: #fff;
     padding: 1em 3em;
     margin-bottom: 1em;
+}
+
+/* NOTES PAGE SCROLLBAR FIX FOR GISTS */
+@media (min-width: 768px) and (max-width: 910px) {
+    .gist {
+        max-width: 450px;
+    }
 }
 
 /* DEFINITION LISTS */
